# chat-langchain

./: download_docling_models.py  download_ocr_models.py  pyproject.toml
_scripts/: check_models.py
backend/: chain.py  chat_workflow.py  config.py  document_processor.py  dummy_retriever.py  enums.py  ingest.py  main.py  models.py  server.py  thread_manager.py
docs/: document_ingestion.md
frontend/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/app/: App.tsx  globals.css  index.css  main.tsx
frontend/app/api/[..._path]/: route.ts
frontend/app/components/: AnswerHeaderToolUI.tsx  ChatLangChain.tsx  DocumentCard.tsx  RouterLogicToolUI.tsx  SelectModel.tsx  SelectedDocumentsToolUI.tsx  SuggestedQuestions.tsx  ThemeToggle.tsx
frontend/app/components/chat-interface/: chat-composer.tsx  index.tsx  messages.tsx
frontend/app/components/thread-history/: index.tsx  thread-item.tsx  thread-list.tsx  threads-list.tsx  utils.ts
frontend/app/components/ui/: Image.tsx
frontend/app/components/ui/assistant-ui/: markdown-text.tsx  syntax-highlighter.tsx
frontend/app/contexts/: GraphContext.tsx  ThemeContext.tsx
frontend/app/hooks/: useThreads.tsx
frontend/app/services/: api.ts
frontend/app/utils/: logger.ts
tests/: create_test_files.py  test_document_processor.py  test_error_handling.py  test_parallel_processing.py
